[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/LicenseKeyVaildator.gd" type="Script" id=1]

[node name="LicenseKeyVaildator" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vaildator" type="HTTPRequest" parent="."]

[node name="ContentDataDownloader" type="HTTPRequest" parent="."]

[node name="ContentFileDownloader" type="HTTPRequest" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -220.5
margin_top = -163.0
margin_right = 220.5
margin_bottom = 163.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 441.0
margin_bottom = 14.0
text = "Assign license key"
align = 1
valign = 1

[node name="LineEdit" type="LineEdit" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 441.0
margin_bottom = 42.0
clear_button_enabled = true
placeholder_text = "Type license key..."

[node name="AddKeyButton" type="Button" parent="VBoxContainer"]
margin_left = 193.0
margin_top = 46.0
margin_right = 247.0
margin_bottom = 66.0
size_flags_horizontal = 4
text = "Assign"

[node name="result" type="Label" parent="VBoxContainer"]
margin_top = 70.0
margin_right = 441.0
margin_bottom = 84.0
align = 1
valign = 1

[node name="AllFilesDownloadProgress" type="ProgressBar" parent="VBoxContainer"]
margin_top = 88.0
margin_right = 441.0
margin_bottom = 205.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDownloadProgress" type="ProgressBar" parent="VBoxContainer"]
margin_top = 209.0
margin_right = 441.0
margin_bottom = 326.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="request_completed" from="Vaildator" to="." method="_on_Vaildator_request_completed"]
[connection signal="request_completed" from="ContentDataDownloader" to="." method="_on_ContentDataDownloader_request_completed"]
[connection signal="request_completed" from="ContentFileDownloader" to="." method="_on_ContentFileDownloader_request_completed"]
[connection signal="pressed" from="VBoxContainer/AddKeyButton" to="." method="_on_AddKeyButton_pressed"]
